[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels.gd" type="Script" id=1]
[ext_resource path="res://bk_levels.png" type="Texture" id=2]
[ext_resource path="res://MenuButtons/button_atras.png" type="Texture" id=3]
[ext_resource path="res://MenuButtons/level1_select.png" type="Texture" id=4]
[ext_resource path="res://MenuButtons/level2_select.png" type="Texture" id=5]
[ext_resource path="res://MenuButtons/level3_select.png" type="Texture" id=6]
[ext_resource path="res://MenuButtons/level4_select.png" type="Texture" id=7]
[ext_resource path="res://MenuButtons/level5_select.png" type="Texture" id=8]
[ext_resource path="res://MenuButtons/level6_select.png" type="Texture" id=9]

[node name="LvlSelect_menu" type="CanvasLayer"]

pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_horizontal_guides_": [ 288.337, 72.0922, 144.174, 216.256 ],
"_edit_vertical_guides_": [ 639.661, 92.5011, 182.604, 274.792, 365.312, 457.17, 548.186 ]
}

[node name="Levels" type="Control" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Levels" index="0"]

position = Vector2( 320.205, 180.211 )
scale = Vector2( 0.333399, 0.333399 )
texture = ExtResource( 2 )

[node name="Btn_atras" type="TouchScreenButton" parent="Levels" index="1"]

position = Vector2( 0.352554, 3.52589 )
scale = Vector2( 0.12, 0.12 )
normal = ExtResource( 3 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Container" type="Container" parent="Levels" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 639.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Control" type="Control" parent="Levels/Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Btn_lvl1" type="TouchScreenButton" parent="Levels/Container/Control" index="0"]

position = Vector2( 100.338, -9.40041 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 4 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Control2" type="Control" parent="Levels/Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Btn_lvl2" type="TouchScreenButton" parent="Levels/Container/Control2" index="0"]

position = Vector2( 283.042, -9.08556 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 5 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Control3" type="Control" parent="Levels/Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Btn_lvl3" type="TouchScreenButton" parent="Levels/Container/Control3" index="0"]

position = Vector2( 464.924, -8.76836 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 6 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Control4" type="Control" parent="Levels/Container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Btn_lvl4" type="TouchScreenButton" parent="Levels/Container/Control4" index="0"]

position = Vector2( 99.5067, 215.39 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 7 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Control5" type="Control" parent="Levels/Container" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Btn_lvl5" type="TouchScreenButton" parent="Levels/Container/Control5" index="0"]

position = Vector2( 281.678, 215.6 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 8 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[node name="Control6" type="Control" parent="Levels/Container" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Btn_lvl6" type="TouchScreenButton" parent="Levels/Container/Control6" index="0"]

position = Vector2( 464.999, 215.999 )
scale = Vector2( 0.15, 0.15 )
normal = ExtResource( 9 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0
_sections_unfolded = [ "Transform" ]

[connection signal="pressed" from="Levels/Btn_atras" to="Levels" method="_on_Btn_atras_pressed"]

[connection signal="pressed" from="Levels/Container/Control/Btn_lvl1" to="Levels" method="_on_Btn_lvl1_pressed"]

[connection signal="pressed" from="Levels/Container/Control2/Btn_lvl2" to="Levels" method="_on_Btn_lvl2_pressed"]

[connection signal="pressed" from="Levels/Container/Control3/Btn_lvl3" to="Levels" method="_on_Btn_lvl3_pressed"]

[connection signal="pressed" from="Levels/Container/Control4/Btn_lvl4" to="Levels" method="_on_Btn_lvl4_pressed"]

[connection signal="pressed" from="Levels/Container/Control5/Btn_lvl5" to="Levels" method="_on_Btn_lvl5_pressed"]

[connection signal="pressed" from="Levels/Container/Control6/Btn_lvl6" to="Levels" method="_on_Btn_lvl6_pressed"]


